Update current `sbt -help`